# c-playground

./: CMakeLists.txt  main.c  mainCPP.cpp  math_functions.c  math_functions.h
